<resources>

    <string name="app_name">GuiWidgets</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="disable">disable everything</string>
    <string name="red_background">red</string>
    <string name="blue_background">blue</string>
    <string name="radio_buttons">radio buttons</string>
    <string name="check_check">check buttons</string>
    <string name="check_buttons">check buttons</string>
    <string name="setTime">Set Time</string>
    <string name="digital">Change to digital</string>
    <string name="analog">Change to analog</string>
    <string name="pink">pink</string>
    <string name="blue">blue</string>
    <string name="yellow">yellow</string>
    <string name="changeto">"Change to: "</string>

</resources>