<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible" >

    <CheckBox
        android:id="@+id/disableCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/disable"
        android:visibility="visible" />

    <CheckBox
        android:id="@+id/pinkCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/disableCheck"
        android:layout_alignParentLeft="true"
        android:text="@string/pink"
        android:visibility="visible" />

    <DigitalClock
        android:id="@+id/digitalClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/background_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/seekBar1"
        android:text="@string/digital" />

    <AnalogClock
        android:id="@+id/analogClock1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <CheckBox
        android:id="@+id/blueCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/disableCheck"
        android:layout_alignLeft="@+id/digitalClock"
        android:text="@string/blue"
        android:visibility="visible" />

    <CheckBox
        android:id="@+id/yellowCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/disableCheck"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:text="@string/yellow"
        android:visibility="visible" />

</RelativeLayout>
